--- a/camel_testing/pom.xml
+++ b/camel_testing/pom.xml
@@ -1,47 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>oving</groupId>
 	<artifactId>camel_testing</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+
+	<parent>
+		<groupId>oving</groupId>
+		<artifactId>daniel_testing</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>2.10.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-		</dependency>
-
-		<!-- 
-
-		<dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-jdk14</artifactId> 
-			<version>1.7.1</version> </dependency> 
-			
-			<dependency> <groupId>org.slf4j</groupId> 
-			<artifactId>slf4j-simple</artifactId> <version>1.6.6</version> </dependency> 
-			
-			<dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> 
-			<version>1.0.7</version> </dependency> 
-			
-			<dependency> <groupId>org.slf4j</groupId> 
-			<artifactId>slf4j-jcl</artifactId> <version>1.7.1</version> </dependency> 
-			
-			<dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
-			<version>1.7.1</version> </dependency> 
-			
-			-->
-
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.0.7</version>
 		</dependency>
 
 	</dependencies>
