--- a/play_testing/todolist2/conf/application.conf
+++ b/play_testing/todolist2/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="nS_5E12RqQ9wSlUdy6@g2ei3;fwB:_Mn3yqUoBZBEZhIK_91xZheCjwF^Vc>LkFC"
+application.secret="qimRyR6f@ISok9ukjsA1d3RHPrdu^p3K<y^dV^hU``u6;>L[=]_fc;:8^r<=0XEq"
 
 # The application languages
 # ~~~~~
@@ -26,25 +26,11 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=
-#
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
-
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
-# Ebean configuration
-# ~~~~~
-# You can declare as many Ebean servers as you want.
-# By convention, the default server is named `default`
-#
-# ebean.default="models.*"
-ebean.default="models.*"
 
 # Logger
 # ~~~~~
